<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/game_title"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/play_button"
        android:textSize="24sp"
        android:backgroundTint="@color/button_color" />

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/play_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/my_icone"
        android:contentDescription="My Icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/game_instructions"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

</RelativeLayout>